--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <aside class="site-sidebar">
 
       <header class="sidebar-header">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <title>view-dashboard</title>
-          <path d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
-        </svg>
-        <span>Dashboard</span>
+        <a href="#" class="sidebar-header__link">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <title>view-dashboard</title>
+            <path d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
+          </svg>
+          <span>Dashboard</span>
+        </a>
       </header>
 
       <nav class="sidebar-navigation">
