--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
       <header class="sidebar-header">
         <a href="#" class="sidebar-header__link">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="sidebar-header__icon">
             <title>view-dashboard</title>
             <path d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
           </svg>
-          <span>Dashboard</span>
+          <span class="sidebar-header__title">Dashboard</span>
         </a>
       </header>
 
@@ -25,56 +25,56 @@
         <ul class="nav-menu">
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>home</title>
                 <path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
               </svg>
-              <span>Home</span>
+              <span class="nav-link__text">Home</span>
             </a>
           </li>
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>card-account-details</title>
                 <path d="M2,3H22C23.05,3 24,3.95 24,5V19C24,20.05 23.05,21 22,21H2C0.95,21 0,20.05 0,19V5C0,3.95 0.95,3 2,3M14,6V7H22V6H14M14,8V9H21.5L22,9V8H14M14,10V11H21V10H14M8,13.91C6,13.91 2,15 2,17V18H14V17C14,15 10,13.91 8,13.91M8,6A3,3 0 0,0 5,9A3,3 0 0,0 8,12A3,3 0 0,0 11,9A3,3 0 0,0 8,6Z" />
               </svg>
-              <span>Profile</span>
+              <span class="nav-link__text">Profile</span>
             </a>
           </li>
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>message</title>
                 <path d="M20,2H4A2,2 0 0,0 2,4V22L6,18H20A2,2 0 0,0 22,16V4C22,2.89 21.1,2 20,2Z" />
               </svg>
-              <span>Messages</span>
+              <span class="nav-link__text">Messages</span>
             </a>
           </li>
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>clock-time-three</title>
                 <path d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12S17.5 2 12 2M17 13H11V7H12.5V11.5H17V13Z" />
               </svg>
-              <span>History</span>
+              <span class="nav-link__text">History</span>
             </a>
           </li>
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>file-document-multiple</title>
                 <path d="M4 4V22H20V24H4C2.9 24 2 23.1 2 22V4H4M15 7H20.5L15 1.5V7M8 0H16L22 6V18C22 19.11 21.11 20 20 20H8C6.89 20 6 19.1 6 18V2C6 .89 6.89 0 8 0M17 16V14H8V16H17M20 12V10H8V12H20Z" />
               </svg>
-              <span>Tasks</span>
+              <span class="nav-link__text">Tasks</span>
             </a>
           </li>
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>account-group-outline</title>
                 <path d="M12,5A3.5,3.5 0 0,0 8.5,8.5A3.5,3.5 0 0,0 12,12A3.5,3.5 0 0,0 15.5,8.5A3.5,3.5 0 0,0 12,5M12,7A1.5,1.5 0 0,1 13.5,8.5A1.5,1.5 0 0,1 12,10A1.5,1.5 0 0,1 10.5,8.5A1.5,1.5 0 0,1 12,7M5.5,8A2.5,2.5 0 0,0 3,10.5C3,11.44 3.53,12.25 4.29,12.68C4.65,12.88 5.06,13 5.5,13C5.94,13 6.35,12.88 6.71,12.68C7.08,12.47 7.39,12.17 7.62,11.81C6.89,10.86 6.5,9.7 6.5,8.5C6.5,8.41 6.5,8.31 6.5,8.22C6.2,8.08 5.86,8 5.5,8M18.5,8C18.14,8 17.8,8.08 17.5,8.22C17.5,8.31 17.5,8.41 17.5,8.5C17.5,9.7 17.11,10.86 16.38,11.81C16.5,12 16.63,12.15 16.78,12.3C16.94,12.45 17.1,12.58 17.29,12.68C17.65,12.88 18.06,13 18.5,13C18.94,13 19.35,12.88 19.71,12.68C20.47,12.25 21,11.44 21,10.5A2.5,2.5 0 0,0 18.5,8M12,14C9.66,14 5,15.17 5,17.5V19H19V17.5C19,15.17 14.34,14 12,14M4.71,14.55C2.78,14.78 0,15.76 0,17.5V19H3V17.07C3,16.06 3.69,15.22 4.71,14.55M19.29,14.55C20.31,15.22 21,16.06 21,17.07V19H24V17.5C24,15.76 21.22,14.78 19.29,14.55M12,16C13.53,16 15.24,16.5 16.23,17H7.77C8.76,16.5 10.47,16 12,16Z" />
               </svg>
-              <span>Communities</span>
+              <span class="nav-link__text">Communities</span>
             </a>
           </li>
         </ul>
@@ -82,29 +82,29 @@
         <ul class="nav-menu nav-menu--secondary">
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>cog</title>
                 <path d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z" />
               </svg>
-              <span>Settings</span>
+              <span class="nav-link__text">Settings</span>
             </a>
           </li>
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>help-box</title>
                 <path d="M11,18H13V16H11V18M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3Z" />
               </svg>
-              <span>Support</span>
+              <span class="nav-link__text">Support</span>
             </a>
           </li>
           <li class="nav-menu__item">
             <a href="#" class="nav-menu__link">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" focusable="false" aria-hidden="true" class="nav-link__icon">
                 <title>shield-check</title>
                 <path d="M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1Z" />
               </svg>
-              <span>Privacy</span>
+              <span class="nav-link__text">Privacy</span>
             </a>
           </li>
         </ul>
@@ -357,54 +357,58 @@
 
           <section class="announcements-widget" aria-labelledby="announcements-heading">
             <h3 id="announcements-heading" class="section-title">Announcements</h3>
-            <div class="announcements-list">
-              <article class="announcement-item">
-                <h3 class="announcement-item__title">Site Maintenance</h3>
-                <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
-              </article>
-              <article class="announcement-item">
-                <h3 class="announcement-item__title">Community Share Day</h3>
-                <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
-              </article>
-              <article class="announcement-item">
-                <h3 class="announcement-item__title">Updated Privacy Policy</h3>
-                <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
-              </article>
+            <div class="announcement-container">
+              <div class="announcements-list">
+                <article class="announcement-item">
+                  <h3 class="announcement-item__title">Site Maintenance</h3>
+                  <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
+                </article>
+                <article class="announcement-item">
+                  <h3 class="announcement-item__title">Community Share Day</h3>
+                  <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
+                </article>
+                <article class="announcement-item">
+                  <h3 class="announcement-item__title">Updated Privacy Policy</h3>
+                  <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
+                </article>
+              </div>
             </div>
           </section>
 
           <section class="trending-widget" aria-labelledby="trending-heading">
             <h3 id="trending-heading" class="section-title">Trending</h3>
-            <ul class="trending-list">
-              <li class="trending-item">
-                <img src="images/shinei.png" alt="Profile picture for @shinei">
-                <div class="trending-item__info">
-                  <p class="trending-item__handle">@shinei</p>
-                  <p class="trending-item__project">86</p>
-                </div>
-              </li>
-              <li class="trending-item">
-                <img src="images/jinwoo.png" alt="Profile picture for @sungJinwoo">
-                <div class="trending-item__info">
-                  <p class="trending-item__handle">@sungJinwoo</p>
-                  <p class="trending-item__project">Solo Leveling</p>
-                </div>
-              </li>
-              <li class="trending-item">
-                <img src="images/tanjiro.png" alt="Profile picture for @tanjiro">
-                <div class="trending-item__info">
-                  <p class="trending-item__handle">@tanjiro</p>
-                  <p class="trending-item__project">Demon Slayer</p>
-                </div>
-              </li>
-              <li class="trending-item">
-                <img src="images/yuno.png" alt="Profile picture for @yuno">
-                <div class="trending-item__info">
-                  <p class="trending-item__handle">@yuno</p>
-                  <p class="trending-item__project">Black Clover</p>
-                </div>
-              </li>
-            </ul>
+            <div class="trending-container">
+              <ul class="trending-list">
+                <li class="trending-item">
+                  <img src="images/shinei.png" alt="Profile picture for @shinei">
+                  <div class="trending-item__info">
+                    <span class="trending-item__handle">@shinei</span>
+                    <span class="trending-item__project">86</span>
+                  </div>
+                </li>
+                <li class="trending-item">
+                  <img src="images/jinwoo.png" alt="Profile picture for @sungJinwoo">
+                  <div class="trending-item__info">
+                    <span class="trending-item__handle">@sungJinwoo</span>
+                    <span class="trending-item__project">Solo Leveling</span>
+                  </div>
+                </li>
+                <li class="trending-item">
+                  <img src="images/tanjiro.png" alt="Profile picture for @tanjiro">
+                  <div class="trending-item__info">
+                    <span class="trending-item__handle">@tanjiro</span>
+                    <span class="trending-item__project">Demon Slayer</span>
+                  </div>
+                </li>
+                <li class="trending-item">
+                  <img src="images/yuno.png" alt="Profile picture for @yuno">
+                  <div class="trending-item__info">
+                    <span class="trending-item__handle">@yuno</span>
+                    <span class="trending-item__project">Black Clover</span>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </section>
 
       </section>
