refactor(scss): structure files into components

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p class="welcome-message__text">
               Hi there, <br>
               <span class="welcome-message__user">
-                Jin Oakley <a href="">(@JinOakly)</a></span>
+                Jin Oakley <a class="welcome-message__handle" href="#">(@JinOakly)</a></span>
             </p>
           </div>
           <div class="action-buttons">
