refactor(assets): organize assets into a single directory

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
               </svg>
             </button>
 
-            <img src="images/profile.png" alt="Profile picture for Jin Oakley" class="user-profile__avatar">
+            <img src="assets/images/profile.png" alt="Profile picture for Jin Oakley" class="user-profile__avatar">
             <span class="user-profile__name">Jin Oakley</span>
           </div>
         </div>
         <div class="header-bottom">
           <div class="welcome-message">
-            <img src="images/profile.png" alt="Profile picture for Jin Oakley" class="welcome-message__avatar">
+            <img src="assets/images/profile.png" alt="Profile picture for Jin Oakley" class="welcome-message__avatar">
             <p class="welcome-message__text">
               Hi there, <br>
               <span class="welcome-message__user">
@@ -398,28 +398,28 @@
             <div class="trending-container">
               <ul class="trending-list">
                 <li class="trending-item">
-                  <img src="images/shinei.png" alt="Profile picture for @shinei">
+                  <img src="assets/images/shinei.png" alt="Profile picture for @shinei">
                   <div class="trending-item__info">
                     <span class="trending-item__handle">@shinei</span>
                     <span class="trending-item__project">86</span>
                   </div>
                 </li>
                 <li class="trending-item">
-                  <img src="images/jinwoo.png" alt="Profile picture for @sungJinwoo">
+                  <img src="assets/images/jinwoo.png" alt="Profile picture for @sungJinwoo">
                   <div class="trending-item__info">
                     <span class="trending-item__handle">@sungJinwoo</span>
                     <span class="trending-item__project">Solo Leveling</span>
                   </div>
                 </li>
                 <li class="trending-item">
-                  <img src="images/tanjiro.png" alt="Profile picture for @tanjiro">
+                  <img src="assets/images/tanjiro.png" alt="Profile picture for @tanjiro">
                   <div class="trending-item__info">
                     <span class="trending-item__handle">@tanjiro</span>
                     <span class="trending-item__project">Demon Slayer</span>
                   </div>
                 </li>
                 <li class="trending-item">
-                  <img src="images/yuno.png" alt="Profile picture for @yuno">
+                  <img src="assets/images/yuno.png" alt="Profile picture for @yuno">
                   <div class="trending-item__info">
                     <span class="trending-item__handle">@yuno</span>
                     <span class="trending-item__project">Black Clover</span>
