feat(ui): finalize project styling and layout

--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
               </svg>
             </button>
 
-            <img src="assets/images/profile.png" alt="Profile picture for Jin Oakley" class="user-profile__avatar">
-            <span class="user-profile__name">Jin Oakley</span>
+            <img src="assets/images/profile.png" alt="Profile picture for Leo" class="user-profile__avatar">
+            <a class="user-profile__name" href="#">ar1ze</a>
           </div>
         </div>
         <div class="header-bottom">
           <div class="welcome-message">
-            <img src="assets/images/profile.png" alt="Profile picture for Jin Oakley" class="welcome-message__avatar">
+            <img src="assets/images/profile.png" alt="Profile picture for Leo" class="welcome-message__avatar">
             <p class="welcome-message__text">
               Hi there, <br>
               <span class="welcome-message__user">
-                Jin Oakley <a class="welcome-message__handle" href="#">(@JinOakly)</a></span>
+                Leo <a class="welcome-message__handle" href="#">(@ar1ze)</a></span>
             </p>
           </div>
           <div class="action-buttons">
@@ -168,7 +168,7 @@
             <article class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title">Super Cool Project</h3>
+                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Super Cool Project</a></h3>
                 <p class="project-card__description">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -202,7 +202,7 @@
             <article class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title">Less Cool Project</h3>
+                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Less Cool Project</a></h3>
                 <p class="project-card__description">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -236,7 +236,7 @@
             <article class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title">Impossible App</h3>
+                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Impossible App</a></h3>
                 <p class="project-card__description">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -270,7 +270,7 @@
             <article class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title">Easy Peasy App</h3>
+                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Easy Peasy App</a></h3>
                 <p class="project-card__description">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -304,7 +304,7 @@
             <article class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title">Ad Blocker</h3>
+                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Ad Blocker</a></h3>
                 <p class="project-card__description">Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -338,7 +338,7 @@
             <article class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title">Money Maker</h3>
+                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Money Maker</a></h3>
                 <p class="project-card__description">Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -378,15 +378,15 @@
             <div class="announcement-container">
               <div class="announcements-list">
                 <article class="announcement-item">
-                  <h3 class="announcement-item__title">Site Maintenance</h3>
+                  <h3 class="announcement-item__title"><a class="announcement-item__title-link" href="#">Site Maintenance</a></h3>
                   <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
                 </article>
                 <article class="announcement-item">
-                  <h3 class="announcement-item__title">Community Share Day</h3>
+                  <h3 class="announcement-item__title"><a class="announcement-item__title-link" href="#">Community Share Day</a></h3>
                   <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
                 </article>
                 <article class="announcement-item">
-                  <h3 class="announcement-item__title">Updated Privacy Policy</h3>
+                  <h3 class="announcement-item__title"><a class="announcement-item__title-link" href="#">Updated Privacy Policy</a></h3>
                   <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
                 </article>
               </div>
@@ -398,30 +398,30 @@
             <div class="trending-container">
               <ul class="trending-list">
                 <li class="trending-item">
-                  <img src="assets/images/shinei.png" alt="Profile picture for @shinei">
+                  <img class="trending-item__avatar" src="assets/images/shinei.png" alt="Profile picture for @shinei">
                   <div class="trending-item__info">
-                    <span class="trending-item__handle">@shinei</span>
+                    <a href="#" class="trending-item__handle">@shinei</a>
                     <span class="trending-item__project">86</span>
                   </div>
                 </li>
                 <li class="trending-item">
-                  <img src="assets/images/jinwoo.png" alt="Profile picture for @sungJinwoo">
+                  <img class="trending-item__avatar" src="assets/images/jinwoo.png" alt="Profile picture for @sungJinwoo">
                   <div class="trending-item__info">
-                    <span class="trending-item__handle">@sungJinwoo</span>
+                    <a href="#" class="trending-item__handle">@sungJinwoo</a>
                     <span class="trending-item__project">Solo Leveling</span>
                   </div>
                 </li>
                 <li class="trending-item">
-                  <img src="assets/images/tanjiro.png" alt="Profile picture for @tanjiro">
+                  <img class="trending-item__avatar" src="assets/images/tanjiro.png" alt="Profile picture for @tanjiro">
                   <div class="trending-item__info">
-                    <span class="trending-item__handle">@tanjiro</span>
+                    <a href="#" class="trending-item__handle">@tanjiro</a>
                     <span class="trending-item__project">Demon Slayer</span>
                   </div>
                 </li>
                 <li class="trending-item">
-                  <img src="assets/images/yuno.png" alt="Profile picture for @yuno">
+                  <img class="trending-item__avatar" src="assets/images/yuno.png" alt="Profile picture for @yuno">
                   <div class="trending-item__info">
-                    <span class="trending-item__handle">@yuno</span>
+                    <a href="#" class="trending-item__handle">@yuno</a>
                     <span class="trending-item__project">Black Clover</span>
                   </div>
                 </li>
