fix(html): correct improper use of section tag

--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
         </div>
       </header>
 
-      <section class="dashboard-grid">
+      <div class="dashboard-grid">
 
-        <section class="projects-section" aria-labelledby="projects-heading">
+        <div class="projects-section" aria-labelledby="projects-heading">
 
-          <h2 id="projects-heading" class="section-title">Your Projects</h2>
+          <p id="projects-heading" class="section-title">Your Projects</p>
           <div class="projects-grid">
 
-            <article class="project-card">
+            <div class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Super Cool Project</a></h3>
+                <p class="project-card__title"><a href="#" class="project-card__title-link">Super Cool Project</a></p>
                 <p class="project-card__description">Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -197,12 +197,12 @@
                   </li>
                 </ul>
               </div>
-            </article>
+            </div>
 
-            <article class="project-card">
+            <div class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Less Cool Project</a></h3>
+                <p class="project-card__title"><a href="#" class="project-card__title-link">Less Cool Project</a></p>
                 <p class="project-card__description">Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -231,12 +231,12 @@
                   </li>
                 </ul>
               </div>
-            </article>
+            </div>
 
-            <article class="project-card">
+            <div class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Impossible App</a></h3>
+                <p class="project-card__title"><a href="#" class="project-card__title-link">Impossible App</a></p>
                 <p class="project-card__description">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -265,12 +265,12 @@
                   </li>
                 </ul>
               </div>
-            </article>
+            </div>
 
-            <article class="project-card">
+            <div class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Easy Peasy App</a></h3>
+                <p class="project-card__title"><a href="#" class="project-card__title-link">Easy Peasy App</a></p>
                 <p class="project-card__description">Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -299,12 +299,12 @@
                   </li>
                 </ul>
               </div>
-            </article>
+            </div>
 
-            <article class="project-card">
+            <div class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Ad Blocker</a></h3>
+                <p class="project-card__title"><a href="#" class="project-card__title-link">Ad Blocker</a></p>
                 <p class="project-card__description">Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -333,12 +333,12 @@
                   </li>
                 </ul>
               </div>
-            </article>
+            </div>
 
-            <article class="project-card">
+            <div class="project-card">
               <div class="project-card__highlight"></div>
               <div class="project-card__body">
-                <h3 class="project-card__title"><a href="#" class="project-card__title-link">Money Maker</a></h3>
+                <p class="project-card__title"><a href="#" class="project-card__title-link">Money Maker</a></p>
                 <p class="project-card__description">Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
                 <ul class="project-card__actions">
                   <li class="project-card__action-item">
@@ -367,34 +367,34 @@
                   </li>
                 </ul>
               </div>
-            </article>
+            </div>
           </div>
-        </section>
+        </div>
 
         <div class="sidebar-widgets">
 
-          <section class="announcements-widget" aria-labelledby="announcements-heading">
-            <h3 id="announcements-heading" class="section-title">Announcements</h3>
+          <div class="announcements-widget" aria-labelledby="announcements-heading">
+            <p id="announcements-heading" class="section-title">Announcements</p>
             <div class="announcement-container">
               <div class="announcements-list">
-                <article class="announcement-item">
-                  <h3 class="announcement-item__title"><a class="announcement-item__title-link" href="#">Site Maintenance</a></h3>
+                <div class="announcement-item">
+                  <p class="announcement-item__title"><a class="announcement-item__title-link" href="#">Site Maintenance</a></p>
                   <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
-                </article>
-                <article class="announcement-item">
-                  <h3 class="announcement-item__title"><a class="announcement-item__title-link" href="#">Community Share Day</a></h3>
+                </div>
+                <div class="announcement-item">
+                  <p class="announcement-item__title"><a class="announcement-item__title-link" href="#">Community Share Day</a></p>
                   <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
-                </article>
-                <article class="announcement-item">
-                  <h3 class="announcement-item__title"><a class="announcement-item__title-link" href="#">Updated Privacy Policy</a></h3>
+                </div>
+                <div class="announcement-item">
+                  <p class="announcement-item__title"><a class="announcement-item__title-link" href="#">Updated Privacy Policy</a></p>
                   <p class="announcement-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum cupiditate sapiente dicta.</p>
-                </article>
+                </div>
               </div>
             </div>
-          </section>
+          </div>
 
-          <section class="trending-widget" aria-labelledby="trending-heading">
-            <h3 id="trending-heading" class="section-title">Trending</h3>
+          <div class="trending-widget" aria-labelledby="trending-heading">
+            <p id="trending-heading" class="section-title">Trending</p>
             <div class="trending-container">
               <ul class="trending-list">
                 <li class="trending-item">
@@ -427,9 +427,9 @@
                 </li>
               </ul>
             </div>
-          </section>
-
-      </section>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 
